--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,20 @@ repositories {
     mavenCentral()
 }
 
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "http://10.202.129.239:8081/artifactory/otr-maven/") {
+                authentication(userName: "admin", password: "Ehome100%")
+            }
+
+            pom.version = "${project.version}"
+            pom.artifactId = "${project.name}"
+            pom.groupId = "${project.group}"
+        }
+    }
+}
+
 dependencies {
     compile 'org.projectlombok:lombok:1.16.14'
     testCompile group: 'junit', name: 'junit', version: '4.12'
